--- a/simplon.css
+++ b/simplon.css
@@ -32,14 +32,15 @@ input{
 	display:block;
 	margin: 3px 20vh 3px 20vh;
 	outline: none;
-	border-left: none;
-	border-top: none;
 }
 input[type="submit"]{
 	height: 25px;
+	transition-duration: 1s;
+	color: white;
 	background-color: rgba(194, 24, 17, 9.0);
 }
 input[type="submit"]:hover{
+    color: white;
 	background-color: rgba(161, 30, 30, 6.0);
 }
 #copy{
@@ -53,6 +54,7 @@ input[type="submit"]:hover{
 	input{
 		margin: 3px 25% 3px 20%;
 		width: 200px;
+		border-top: none;
 	}
 	#logo{
 		width: 100%;
@@ -72,6 +74,8 @@ input[type="submit"]:hover{
 	}
 	input{
 		margin: 3px 30% 3px 25%;
+		border-left: none;
+		border-top: none;
 	}
 
 }
